chapitres/21/mailpit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: test-istio
  labels:
    app: mailpit
spec:
  ports:
    - name: http
      port: 8025
      targetPort: 8025
      appProtocol: http
    - name: smtp
      port: 1025
      targetPort: 1025
      appProtocol: smtp
  selector:
    app: mailpit
