chapitres/21/mailpit/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mailpit
  namespace: test-istio
spec:
  hosts:
  - "test.eni.yannig.ovh"
  gateways:
  - mailpit-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8025
            host: mailpit
